--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
-
+*
+!*.html
+!*.css
+!*.js
+!*.png
+!*.jpg
+!*.svg
+!*.gif
+!*.mp4
+!*.txt
+!README.md
+!LICENSE.md
+!.gitignore
+dist/
+build/
+.idea/
+.vscode/
+.DS_Store
+Thumbs.db
