--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,14 @@ name: Change Default Webpage
 on:
   push:
     branches:
-      - main  # adjust branch name as needed
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Switch default webpage to splash.html
         run: |
@@ -21,7 +21,5 @@ jobs:
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git add index.html
-          git commit -m "Change default webpage to splash.html"
-          git push
           git commit -m "Change default webpage to splash.html"
           git push
