--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,12 @@
 !*.html
 !*.css
 !*.js
-!*.png
 !images/*.png
-!*.jpg
-!*.svg
-!*.gif
-!*.mp3
-!*.mp4
-!*.txt
+!images/*.jpg
+!images/*.svg
+!images/*.gif
+!videos/*.mp3
+!videos/*.mp4
 !README.md
 !LICENSE.md
 !.gitignore
