--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,18 @@
 !images/*.svg
 !images/*.gif
 !images/*.webp
+!assets/
+!assets/*.jpg
+!assets/*.png
+!assets/*.webp
+!assets/content-page/
+!assets/content-page/*jpg
+!assets/content-page/*png
+!assets/content-page/*webp
+!assets/merch/
+!assets/merch/*jpg
+!assets/merch/*png
+!assets/merch/*webp
 !scripts/
 !scripts/*.js
 !videos/
