--- a/.gitignore
+++ b/.gitignore
@@ -33,14 +33,17 @@
 !images/*.webp
 !assets/
 !assets/*.jpg
+!assets/*.jpeg
 !assets/*.png
 !assets/*.webp
 !assets/content-page/
 !assets/content-page/*jpg
+!assets/content-page/*jpeg
 !assets/content-page/*png
 !assets/content-page/*webp
 !assets/merch/
 !assets/merch/*jpg
+!assets/content-page/*jpeg
 !assets/merch/*png
 !assets/merch/*webp
 !scripts/
