--- a/.gitignore
+++ b/.gitignore
@@ -36,16 +36,19 @@
 !assets/*.jpeg
 !assets/*.png
 !assets/*.webp
+!assets/*.avif
 !assets/content-page/
 !assets/content-page/*jpg
 !assets/content-page/*jpeg
 !assets/content-page/*png
 !assets/content-page/*webp
+!assets/content-page/*.avif
 !assets/merch/
 !assets/merch/*jpg
-!assets/content-page/*jpeg
+!assets/merch/*jpeg
 !assets/merch/*png
 !assets/merch/*webp
+!assets/merch/*.avif
 !scripts/
 !scripts/*.js
 !videos/
